Interface calculo iMC

--- a/react-fundamentos/src/app/globals.css
+++ b/react-fundamentos/src/app/globals.css
@@ -36,3 +36,9 @@ body {
   @apply bg-gray-600;
   @apply rounded-md;
 }
+
+.botao {
+  @apply bg-gray-600;
+  @apply p-2;
+  @apply rounded-md text-amber-300 hover:bg-gray-800;
+}
